# xvstreamer

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  README.md  build.sh
cmake/: Coverage.cmake  Dependencies-pkg.cmake  Dependencies-repo.cmake  Dependencies.cmake  Doxygen.cmake
docs/: Doxyfile.in
include/core/: error_hdr.h  gst_memory.h
include/dvc/: camera.h  dvc.h  video.h
include/stream/: streamtraits.h  video.h  video.tpp
include/topology/: corety.h  msgtypety.h
include/utils/: env_mgr.h
include/xstream/: pipeline.h  pipeline.tpp  stream.h  video.h  video.tpp
include/xvscore/: error_hdr.h  gst_memory.h
src/: CMakeLists.txt
src/player/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  env_mgr.cpp
src/utils/test/: CMakeLists.txt  test_env_mgr.cpp
test/: CMakeLists.txt  test_err_hdr.cpp  test_error_hdr.cpp  test_gst_memory.cpp  test_video.cpp
